OllyTiper.2.0/OllyTiper/Plugin.h

  #define ODBG_Pluginmenu      _ODBG_Pluginmenu
  #define ODBG_Pluginaction    _ODBG_Pluginaction
  #define ODBG_Pluginshortcut  _ODBG_Pluginshortcut
  #define ODBG_Paused          _ODBG_Paused
  #define ODBG_Pausedex        _ODBG_Pausedex
  #define ODBG_Plugincmd       _ODBG_Plugincmd
typedef unsigned char  uchar;          
typedef unsigned long  ulong;          
typedef struct t_table {               
  HWND           hw;                   
  t_sorted       data;                 
  t_bar          bar;                  
  int            showbar;              
  short          hscroll;              
  short          colsel;               
  int            mode;                 
  int            font;                 
  short          scheme;               
  short          hilite;               
  int            offset;               
  int            xshift;               
  DRAWFUNC       *drawfunc;            
} t_table;
#define INT3           0xCC            
typedef struct t_reg {                 
  int            modified;             
  int            modifiedbyuser;       
  int            singlestep;           
  ulong          r[8];                 
  ulong          ip;                   
  ulong          flags;                
  int            top;                  
  long double    f[8];                 
  char           tag[8];               
  ulong          fst;                  
  ulong          fcw;                  
  ulong          s[6];                 
  ulong          base[6];              
  ulong          limit[6];             
  char           big[6];               
  ulong          dr6;                  
  ulong          threadid;             
  ulong          lasterror;            
  int            ssevalid;             
  int            ssemodified;          
  char           ssereg[8][16];        
  ulong          mxcsr;                
  int            selected;             
  ulong          drlin[4];             
  ulong          dr7;                  
} t_reg;
typedef struct t_thread {              
  ulong          threadid;             
  ulong          dummy;                
  ulong          type;                 
  HANDLE         thread;               
  ulong          datablock;            
  ulong          entry;                
  ulong          stacktop;             
  ulong          stackbottom;          
  CONTEXT        context;              
  t_reg          reg;                  
  int            regvalid;             
  t_reg          oldreg;               
  int            oldregvalid;          
  int            suspendcount;         
  long           usertime;             
  long           systime;              
  ulong          reserved[16];         
} t_thread;
typedef struct t_memory {              
  ulong          base;                 
  ulong          size;                 
  ulong          type;                 
  ulong          owner;                
  ulong          initaccess;           
  ulong          access;               
  ulong          threadid;             
  char           sect[SHORTLEN];       
  uchar          *copy;                
  ulong          reserved[8];          
} t_memory;
typedef struct t_stringtable {         
  ulong          name;                 
  ulong          language;             
  ulong          addr;                 
  ulong          size;                 
} t_stringtable;
typedef struct t_fixup {
  ulong          base;                 
  ulong          size;                 
} t_fixup;
typedef struct t_symvar {              
  int            next;                 
  ushort         kind;                 
  union {
    ulong        type;                 
    ulong        regs; };              
  union {
    ulong        addr;                 
    long         offset; };            
  ulong          size;                 
  int            optvar;               
  ulong          nameaddr;             
} t_symvar;
typedef struct t_jdest {               
  char           type;                 
  ulong          from;                 
  ulong          to;                   
} t_jdest;
typedef struct t_module {              
  ulong          base;                 
  ulong          size;                 
  ulong          type;                 
  ulong          codebase;             
  ulong          codesize;             
  ulong          resbase;              
  ulong          ressize;              
  t_stringtable  *stringtable;         
  int            nstringtable;         
  int            maxstringtable;       
  ulong          entry;                
  ulong          database;             
  ulong          idatatable;           
  ulong          idatabase;            
  ulong          edatatable;           
  ulong          edatasize;            
  ulong          reloctable;           
  ulong          relocsize;            
  char           name[SHORTLEN];       
  char           path[MAX_PATH];       
  int            nsect;                
  IMAGE_SECTION_HEADER *sect;          
  ulong          headersize;           
  ulong          fixupbase;            
  int            nfixup;               
  t_fixup        *fixup;               
  char           *codedec;             
  ulong          codecrc;              
  char           *hittrace;            
  char           *hittracecopy;        
  char           *datadec;             
  t_table        namelist;             
  t_symvar       *symvar;              
  int            nsymvar;              
  int            maxsymvar;            
  char           *globaltypes;         
  ulong          mainentry;            
  ulong          realsfxentry;         
  int            updatenamelist;       
  ulong          origcodesize;         
  ulong          sfxbase;              
  ulong          sfxsize;              
  int            issystemdll;          
  int            processed;            
  int            dbghelpsym;           
  char           version[NVERS];       
  t_jdest        *jddata;              
  int            njddata;              
  ulong          reserved[15];         
} t_module;
typedef ulong SPECFUNC(char *,ulong,ulong,ulong,t_disasm *,int);
typedef struct t_dump {                
  t_table        table;                
  int            dimmed;               
  ulong          threadid;             
  int            dumptype;             
  SPECFUNC       *specdump;            
  int            menutype;             
  int            itemwidth;            
  int            showstackframes;      
  int            showstacklocals;      
  int            commentmode;          
  char           filename[MAX_PATH];   
  ulong          base;                 
  ulong          size;                 
  ulong          addr;                 
  ulong          lastaddr;             
  ulong          sel0;                 
  ulong          sel1;                 
  ulong          startsel;             
  int            captured;             
  ulong          reladdr;              
  char           relname[SHORTLEN];    
  uchar          *filecopy;            
  uchar          *backup;              
  int            runtraceoffset;       
  ulong          reserved[8];          
} t_dump;
typedef struct t_ref {                 
  ulong          addr;                 
  ulong          size;                 
  ulong          type;                 
  ulong          dest;                 
} t_ref;
typedef struct t_bpoint {              
  ulong          addr;                 
  ulong          dummy;                
  ulong          type;                 
  char           cmd;                  
  ulong          passcount;            
} t_bpoint;
typedef struct t_window {              
  ulong          hwnd;                 
  ulong          dummy;                
  ulong          type;                 
  ulong          parenthw;             
  ulong          winproc;              
  ulong          threadid;             
  ulong          exstyle;              
  ulong          style;                
  ulong          id;                   
  ulong          classproc;            
  int            child;                
  int            level;                
  int            sibling;              
  int            byparent;             
  char           title[TEXTLEN];       
  char           classname[TEXTLEN];   
  char           tree[MAXNEST];        
} t_window;
#define VAL_HINST              1       
#define VAL_HWMAIN             2       
#define VAL_HWCLIENT           3       
#define VAL_NCOLORS            4       
#define VAL_COLORS             5       
#define VAL_BRUSHES            6       
#define VAL_PENS               7       
#define VAL_NFONTS             8       
#define VAL_FONTS              9       
#define VAL_FONTNAMES          10      
#define VAL_FONTWIDTHS         11      
#define VAL_FONTHEIGHTS        12      
#define VAL_NFIXFONTS          13      
#define VAL_DEFFONT            14      
#define VAL_NSCHEMES           15      
#define VAL_SCHEMES            16      
#define VAL_DEFSCHEME          17      
#define VAL_DEFHSCROLL         18      
#define VAL_RESTOREWINDOWPOS   19      
#define VAL_HPROCESS           20      
#define VAL_PROCESSID          21      
#define VAL_HMAINTHREAD        22      
#define VAL_MAINTHREADID       23      
#define VAL_MAINBASE           24      
#define VAL_PROCESSNAME        25      
#define VAL_EXEFILENAME        26      
#define VAL_CURRENTDIR         27      
#define VAL_SYSTEMDIR          28      
#define VAL_DECODEANYIP        29      
#define VAL_PASCALSTRINGS      30      
#define VAL_ONLYASCII          31      
#define VAL_DIACRITICALS       32      
#define VAL_GLOBALSEARCH       33      
#define VAL_ALIGNEDSEARCH      34      
#define VAL_IGNORECASE         35      
#define VAL_SEARCHMARGIN       36      
#define VAL_KEEPSELSIZE        37      
#define VAL_MMXDISPLAY         38      
#define VAL_WINDOWFONT         39      
#define VAL_TABSTOPS           40      
#define VAL_MODULES            41      
#define VAL_MEMORY             42      
#define VAL_THREADS            43      
#define VAL_BREAKPOINTS        44      
#define VAL_REFERENCES         45      
#define VAL_SOURCELIST         46      
#define VAL_WATCHES            47      
#define VAL_CPUFEATURES        50      
#define VAL_TRACEFILE          51      
#define VAL_ALIGNDIALOGS       52      
#define VAL_CPUDASM            53      
#define VAL_CPUDDUMP           54      
#define VAL_CPUDSTACK          55      
#define VAL_APIHELP            56      
#define VAL_HARDBP             57      
#define VAL_PATCHES            58      
#define VAL_HINTS              59      
extc int     cdecl Registerpluginclass(char *classname,char *iconname,
               HINSTANCE dllinst,WNDPROC classproc);
extc void    cdecl Unregisterpluginclass(char *classname);
extc int     cdecl Pluginwriteinttoini(HINSTANCE dllinst,char *key,int value);
extc int     cdecl Pluginwritestringtoini(HINSTANCE dllinst,char *key,char *s);
extc int     cdecl Pluginreadintfromini(HINSTANCE dllinst,char *key,int def);
extc int     cdecl Pluginreadstringfromini(HINSTANCE dllinst,char *key,
               char *s,char *def);
extc int     cdecl Pluginsaverecord(ulong tag,ulong size,void *data);
extc int     cdecl Plugingetvalue(int type);
#define PM_MAIN        0               
#define PM_DUMP        10              
#define PM_MODULES     11              
#define PM_MEMORY      12              
#define PM_THREADS     13              
#define PM_BREAKPOINTS 14              
#define PM_REFERENCES  15              
#define PM_RTRACE      16              
#define PM_WATCHES     17              
#define PM_WINDOWS     18              
#define PM_DISASM      31              
#define PM_CPUDUMP     32              
#define PM_CPUSTACK    33              
#define PM_CPUREGS     34              
#define PP_MAIN                0x0003  
#define   PP_EVENT             0x0000  
#define   PP_PAUSE             0x0001  
#define   PP_TERMINATED        0x0002  
#define PP_BYPROGRAM           0x0004  
#define PP_INT3BREAK           0x0010  
#define PP_MEMBREAK            0x0020  
#define PP_HWBREAK             0x0040  
#define PP_SINGLESTEP          0x0080  
#define PP_EXCEPTION           0x0100  
#define PP_ACCESS              0x0200  
#define PP_GUARDED             0x0400  
#define MI_SIGNATURE   0x00646F4DL     
#define MI_VERSION     0x7265560AL     
#define MI_FILENAME    0x6C69460AL     
#define MI_FILESIZE    0x7A69530AL     
#define MI_TIMESTAMP   0x7473540AL     
#define MI_SFXENTRY    0x6566530AL     
#define MI_PATCH       0x7461500AL     
#define MI_USER        0x0073550AL     
#define MI_PROCDATA    0x6372500AL     
#define MI_SWDATA      0x6977530AL     
#define MI_CALLFINT    0x6966430AL     
#define MI_CALLFMOD    0x6D66430AL     
#define MI_CALLFABS    0x6166430AL     
#define MI_INT3BREAK   0x7470420AL     
#define MI_INT3BRKC    0x6370420AL     
#define MI_HDWRBREAK   0x7262480AL     
#define MI_JDDATA      0x74644A0AL     
#define MI_ANALYSIS    0x616E410AL     
#define MI_ANALPACK    0x636E410AL     
#define MI_AHINT       0x7468410AL     
#define MI_TRACE       0x6172540AL     
#define MI_TRACEPACK   0x6372540AL     
#define MI_CODECRC     0x7263430AL     
#define MI_SAVEAREA    0x6176530AL     
#define MI_END         0x646E450AL     
#define MI_WINJUG      0x67754A0AL     
#define MI_WINJU1      0x31754A0AL
#define MI_WINJU2      0x32754A0AL
#define MI_WINJU3      0x33754A0AL
#define MI_APPST       0x73614F0AL     
extc int  _export cdecl ODBG_Pluginmenu(int origin,char data[4096],void *item);
extc void _export cdecl ODBG_Pluginaction(int origin,int action,void *item);
extc int  _export cdecl ODBG_Pluginshortcut(
                        int origin,int ctrl,int alt,int shift,int key,
                        void *item);
extc int  _export cdecl ODBG_Paused(int reason,t_reg *reg);
extc int  _export cdecl ODBG_Pausedex(int reasonex,int dummy,t_reg *reg,
                        DEBUG_EVENT *debugevent);
extc int  _export cdecl ODBG_Plugincmd(int reason,t_reg *reg,char *cmd);