Loadsome2/src/Plugin.pas


/////////////////////////////////////////////////////////////////////////////////
/////////////////////////// PLUGIN-SPECIFIC FUNCTIONS ///////////////////////////

// Parameters of Plugingetvalue().
const
  VAL_HINST         = 1;                // Current program instance
  VAL_HWMAIN        = 2;                // Handle of the main window
  VAL_HWCLIENT      = 3;                // Handle of the MDI client window
  VAL_NCOLORS       = 4;                // Number of common colors
  VAL_COLORS        = 5;                // RGB values of common colors
  VAL_BRUSHES       = 6;                // Handles of common color brushes
  VAL_PENS          = 7;                // Handles of common color pens
  VAL_NFONTS        = 8;                // Number of common fonts
  VAL_FONTS         = 9;                // Handles of common fonts
  VAL_FONTNAMES     = 10;               // Internal font names
  VAL_FONTWIDTHS    = 11;               // Average widths of common fonts
  VAL_FONTHEIGHTS   = 12;               // Average heigths of common fonts
  VAL_NFIXFONTS     = 13;               // Actual number of fixed-pitch fonts
  VAL_DEFFONT       = 14;               // Index of default font
  VAL_NSCHEMES      = 15;               // Number of color schemes
  VAL_SCHEMES       = 16;               // Color schemes
  VAL_DEFSCHEME     = 17;               // Index of default colour scheme
  VAL_DEFHSCROLL    = 18;               // Default horizontal scroll
  VAL_RESTOREWINDOWPOS = 19;            // Restore window positions from .ini
  VAL_HPROCESS      = 20;               // Handle of Debuggee
  VAL_PROCESSID     = 21;               // Process ID of Debuggee
  VAL_HMAINTHREAD   = 22;               // Handle of main thread
  VAL_MAINTHREADID  = 23;               // Thread ID of main thread
  VAL_MAINBASE      = 24;               // Base of main module in the process
  VAL_PROCESSNAME   = 25;               // Name of the active process
  VAL_EXEFILENAME   = 26;               // Name of the main debugged file
  VAL_CURRENTDIR    = 27;               // Current directory for debugged process
  VAL_SYSTEMDIR     = 28;               // Windows system directory
  VAL_DECODEANYIP   = 29;               // Decode registers dependless on EIP
  VAL_PASCALSTRINGS = 30;               // Decode Pascal-style string constants
  VAL_ONLYASCII     = 31;               // Only printable ASCII chars in dump
  VAL_DIACRITICALS  = 32;               // Allow diacritical symbols in strings
  VAL_GLOBALSEARCH  = 33;               // Search from the beginning of block
  VAL_ALIGNEDSEARCH = 34;               // Search aligned to item's size
  VAL_IGNORECASE    = 35;               // Ignore case in string search
  VAL_SEARCHMARGIN  = 36;               // Floating search allows error margin
  VAL_KEEPSELSIZE   = 37;               // Keep size of hex edit selection
  VAL_MMXDISPLAY    = 38;               // MMX display mode in dialog
  VAL_WINDOWFONT    = 39;               // Use calling window's font in dialog
  VAL_TABSTOPS      = 40;               // Distance between tab stops
  VAL_MODULES       = 41;               // Table of modules (.EXE and .DLL)
  VAL_MEMORY        = 42;               // Table of allocated memory blocks
  VAL_THREADS       = 43;               // Table of active threads
  VAL_BREAKPOINTS   = 44;               // Table of active breakpoints
  VAL_REFERENCES    = 45;               // Table with found references
  VAL_SOURCELIST    = 46;               // Table of source files
  VAL_WATCHES       = 47;               // Table of watches
  VAL_CPUFEATURES   = 50;               // CPU feature bits
  VAL_TRACEFILE     = 51;               // Handle of run trace log file
  VAL_ALIGNDIALOGS  = 52;               // Whether to align dialogs
  VAL_CPUDASM       = 53;               // Dump descriptor of CPU Disassembler
  VAL_CPUDDUMP      = 54;               // Dump descriptor of CPU Dump
  VAL_CPUDSTACK     = 55;               // Dump descriptor of CPU Stack
  VAL_APIHELP       = 56;               // Name of selected API help file
  VAL_HARDBP        = 57;               // Whether hardware breakpoints enabled
  VAL_PATCHES       = 58;               // Table of patches
  VAL_HINTS         = 59;               // Sorted data with analysis hints

function Registerpluginclass(classname: PChar; iconname: PChar;
                             dllinst: THandle; classproc: TFarProc): Integer; cdecl;

procedure Unregisterpluginclass(classname: PChar); cdecl;

function Pluginwriteinttoini(dllinst: THandle; key: PChar; value: Integer): Integer; cdecl;

function Pluginwritestringtoini(dllinst: THandle; key: PChar; s: PChar): Integer; cdecl;

function Pluginreadintfromini(dllinst: THandle; key: PChar; def: Integer): Integer; cdecl;

function Pluginreadstringfromini(dllinst: THandle; key: PChar;
                                 s: PChar; def: PChar): Integer; cdecl;

function Pluginsaverecord(tag: ULONG; size: ULONG; data: Pointer): Integer; cdecl;

function Plugingetvalue(itype: Integer): Integer; cdecl;

/////////////////////////////////////////////////////////////////////////////////
/////////////////////// EXPORTED PLUGIN CALLBACK FUNCTIONS //////////////////////

// Origins of standard OllyDbg windows as passed to plugin. In parenthesis is
// the type of item you get in ODBG_Pluginmenu(), ODBG_Pluginaction() and
// ODBG_Pluginshortcut(). Note that this item can be NULL!
const
  PM_MAIN           = 0;                // Main window (NULL)
  PM_DUMP           = 10;               // Any Dump window (t_dump* )
  PM_MODULES        = 11;               // Modules window (t_module* )
  PM_MEMORY         = 12;               // Memory window (t_memory* )
  PM_THREADS        = 13;               // Threads window (t_thread* )
  PM_BREAKPOINTS    = 14;               // Breakpoints window (t_bpoint* )
  PM_REFERENCES     = 15;               // References window (t_ref* )
  PM_RTRACE         = 16;               // Run trace window (int* )
  PM_WATCHES        = 17;               // Watches window (1-based index)
  PM_WINDOWS        = 18;               // Windows window (t_window* )
  PM_DISASM         = 31;               // CPU Disassembler (t_dump* )
  PM_CPUDUMP        = 32;               // CPU Dump (t_dump* )
  PM_CPUSTACK       = 33;               // CPU Stack (t_dump* )
  PM_CPUREGS        = 34;               // CPU Registers (t_reg* )

  // Reasons why debugged application was paused, as a first argument in call to
  // ODBG_Paused(), ODBG_Pausedex() and ODBG_Plugincmd().
  PP_MAIN           = $0003;            // Mask to extract main reason
    PP_EVENT        = $0000;            // Paused on debugging event
    PP_PAUSE        = $0001;            // Paused on user's request
    PP_TERMINATED   = $0002;            // Application terminated

  // Extended reasons in ODBG_Pausedex().
  PP_BYPROGRAM      = $0004;            // Debugging event caused by program
  PP_INT3BREAK      = $0010;            // INT3 breakpoint
  PP_MEMBREAK       = $0020;            // Memory breakpoint
  PP_HWBREAK        = $0040;            // Hardware breakpoint
  PP_SINGLESTEP     = $0080;            // Single-step trap
  PP_EXCEPTION      = $0100;            // Exception, like division by 0
  PP_ACCESS         = $0200;            // Access violation
  PP_GUARDED        = $0400;            // Guarded page

  // Record tags in .udd files.
  MI_SIGNATURE      = $00646F4D;        // Module info signature
  MI_VERSION        = $7265560A;        // OllyDbg version
  MI_FILENAME       = $6C69460A;        // Record with full name of executable
  MI_FILESIZE       = $7A69530A;        // Record with file size
  MI_TIMESTAMP      = $7473540A;        // Record with timestamp file data
  MI_SFXENTRY       = $6566530A;        // Real entry of SFX-able module
  MI_PATCH          = $7461500A;        // Record with patch data
  MI_USER           = $0073550A;        // Record with user-defined label/comment
  MI_PROCDATA       = $6372500A;        // Record with procedure data
  MI_SWDATA         = $6977530A;        // Record with switch data
  MI_CALLFINT       = $6966430A;        // Record with internal call
  MI_CALLFMOD       = $6D66430A;        // Record with intermodular call
  MI_CALLFABS       = $6166430A;        // Record with absolute call
  MI_INT3BREAK      = $7470420A;        // Record with breakpoint data
  MI_INT3BRKC       = $6370420A;        // Record with checked breakpoint data
  MI_HDWRBREAK      = $7262480A;        // Record with hardware breakpoint data
  MI_JDDATA         = $74644A0A;        // Record with all module jump data
  MI_ANALYSIS       = $616E410A;        // Record with analysis data
  MI_ANALPACK       = $636E410A;        // Record with compressed analysis data
  MI_AHINT          = $7468410A;        // Record with analysis hint data
  MI_TRACE          = $6172540A;        // Record with trace data
  MI_TRACEPACK      = $6372540A;        // Record with compressed trace data
  MI_CODECRC        = $7263430A;        // Record with CRC of code for analysis
  MI_SAVEAREA       = $6176530A;        // Record with general-purpose save area
  MI_END            = $646E450A;        // End of module info data

  // Tags reserved for 3rd-party plugins.
  MI_WINJUG         = $67754A0A;        // WindowJuggler by EsseEmme
  MI_WINJU1         = $31754A0A;
  MI_WINJU2         = $32754A0A;
  MI_WINJU3         = $33754A0A;
  MI_APPST          = $73614F0A;        // OllyAppStarter by Homunculus

// Prototypes for plugin callback functions.
type
  TODBG_Plugindata = function(shortname: PChar): Integer; cdecl;

  TODBG_Plugininit = function(ollydbgversion: Integer; hw: HWND;
                              features: PULONG): Integer; cdecl;

  TODBG_Pluginmainloop = procedure(debugevent: PDebugEvent); cdecl;

  TODBG_Pluginsaveudd = procedure(pmod: p_module; ismainmodule: Integer); cdecl;

  TODBG_Pluginuddrecord = function(pmod: p_module; ismainmodule: Integer; tag: ULONG;
                                   size: ULONG; data: Pointer): Integer; cdecl;

  TODBG_Pluginmenu = function(origin: Integer; data: PChar;
                              item: Pointer): Integer; cdecl;

  TODBG_Pluginaction = procedure(origin: Integer; action: Integer;
                                item: Pointer); cdecl;

  TODBG_Pluginshortcut =  function(origin: Integer; ctrl: Integer; alt: Integer;
                                   shift: Integer; key: Integer;
                                   item: Pointer): Integer; cdecl;

  TODBG_Pluginreset = procedure; cdecl;

  TODBG_Pluginclose = function: Integer; cdecl;

  TODBG_Plugindestroy = procedure; cdecl;

  TODBG_Paused = function(reason: Integer; reg: p_reg): Integer; cdecl;

  TODBG_Pausedex = function(reasonex: Integer; dummy: Integer; reg: p_reg;
                            debugevent: PDebugEvent): Integer; cdecl;

  TODBG_Plugincmd = function(reason: Integer; reg: p_reg; cmd: PChar): Integer; cdecl;

implementation

const
  OLLYDBG = 'OllyDbg.exe';
